# StoryGenius

./: .replit  app.py  character_extractor.py  chatbot.py  data_manager.py  enhanced_character_extractor.py  file_processor.py  llm_costs.py  pdf_processor.py  pyproject.toml  replit.md  requirements.txt  vector_db_manager.py
data/: novels.json
data/projects/: -ED-87-B4-EB-A7-88-EB-A1-9D--EC-84-B8-EA-B3-84.json  소나기_-_황순원.json  퇴마록_측백산장.json  현진건-운수좋은날-B3356-개벽.json
vector_data/: %ED%87%B4%EB%A7%88%EB%A1%9D+%EC%84%B8%EA%B3%84_chapters_meta.pkl  %ED%87%B4%EB%A7%88%EB%A1%9D+%EC%84%B8%EA%B3%84_chapters_vectors.npy  %ED%87%B4%EB%A7%88%EB%A1%9D+%EC%84%B8%EA%B3%84_characters_meta.pkl  %ED%87%B4%EB%A7%88%EB%A1%9D+%EC%84%B8%EA%B3%84_characters_vectors.npy  소나기_-_황순원_chapters_meta.pkl  소나기_-_황순원_chapters_vectors.npy  소나기_-_황순원_characters_meta.pkl  소나기_-_황순원_characters_vectors.npy  퇴마록_측백산장_chapters_meta.pkl  퇴마록_측백산장_chapters_vectors.npy  퇴마록_측백산장_characters_meta.pkl  퇴마록_측백산장_characters_vectors.npy  현진건-운수좋은날+B3356-개벽_chapters_meta.pkl  현진건-운수좋은날+B3356-개벽_chapters_vectors.npy  현진건-운수좋은날+B3356-개벽_characters_meta.pkl  현진건-운수좋은날+B3356-개벽_characters_vectors.npy
