[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fitz>=0.0.1.dev2",
    "numpy>=2.3.2",
    "openai>=1.99.3",
    "pandas>=2.3.1",
    "pymupdf>=1.26.3",
    "pypdf2>=3.0.1",
    "streamlit>=1.48.0",
]
